# cmus-web

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
backend/: cli.py  cmus.py  main.py
frontend/: index.html  manifest.json  sw.js
frontend/css/: style.css
frontend/js/: app.js
