[project]
name = "cmus-web"
version = "0.1.1"
description = "PWA remote control for cmus"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mutagen",
    "sse-starlette",
    "click",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "frontend"

[tool.hatch.envs.default]
installer = "uv"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP045"]

[project.scripts]
cmus-web = "backend.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
