[project]
name = "cmus-web"
version = "0.1.3"
description = "PWA remote control for cmus"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0"
keywords = []
authors = [
  { name = "Mário Lourenço", email = "mario.s.lourenco@protonmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "mutagen",
    "sse-starlette",
    "click",
]

[project.urls]
Documentation = "https://github.com/FawkesOficial/python-cmus-web#readme"
Issues = "https://github.com/FawkesOficial/python-cmus-web/issues"
Source = "https://github.com/FawkesOficial/python-cmus-web"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "frontend"

[tool.hatch.envs.default]
installer = "uv"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP045"]

[project.scripts]
cmus-web = "backend.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
